fluxcd/infrastructure/configs/overlays/production/istio-policies/temple-of-time/allow-nextcloud-to-nextcloud-postgres.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-nextcloud-to-nextcloud-postgres
spec:
  selector:
    matchLabels:
      cnpg.io/cluster: nextcloud-postgres
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/temple-of-time/sa/nextcloud
              - cluster.local/ns/temple-of-time/sa/nextcloud-notify-push
      to:
        - operation:
            ports: ["5432"]
